--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "license": "MIT",
   "dependencies": {
-    "puppeteer": "^1.15.0"
+    "puppeteer": "^1.18.1",
+    "puppeteer-extra": "^2.1.3",
+    "puppeteer-extra-plugin-stealth": "^2.2.2"
   }
 }
